# Agentic

./: README.md  pyproject.toml  test.py
bosch_vta_agentic/: fast_main.py  main.py  main_new.py
bosch_vta_agentic/indexes/manuals/: index_store.json
bosch_vta_agentic/indexes/online_resources/: index_store.json
bosch_vta_agentic/utils/: parser.py  schema.py
indexes/manuals/: docstore.json  index_store.json
indexes/online_resources/: index_store.json
