[tool.poetry]
name = "bosch-vta-agentic"
version = "0.1.0"
description = ""
authors = ["Vyoman Jain <75789232+VyoJ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "0.10.64"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
