[tool.poetry]
name = "bosch-vta-agentic"
version = "0.1.0"
description = ""
authors = ["Vyoman Jain <75789232+VyoJ@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-index = "0.10.64"
streamlit = "^1.37.1"
llama-index-llms-groq = "^0.1.4"
llama-index-embeddings-jinaai = "^0.2.1"
python-dotenv = "^1.0.1"
fastapi = "^0.114.0"
uvicorn = "^0.30.6"
soundfile = "^0.12.1"
groq = "^0.11.0"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
